--- a/style.css
+++ b/style.css
@@ -24,3 +24,13 @@ p{font-weight:300;}
   
   
 }
+
+a {
+  color: #000000;
+  text-decoration-line: none;
+/*   text-decoration-line: underline; */
+/*   text-decoration-line: overline; */
+/*   text-decoration-line: line-through; */
+/*   text-decoration-line: underline line-through overline; */
+}
+
