--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   font-family:Roboto;
 }
 
-h1{
+h1 {
   font-weight:900;
   font-size:20pt;
   color:#000000;
@@ -25,12 +25,11 @@ p{font-weight:300;}
   
 }
 
-a {
-  color: #000000;
-  text-decoration-line: none;
-/*   text-decoration-line: underline; */
-/*   text-decoration-line: overline; */
-/*   text-decoration-line: line-through; */
-/*   text-decoration-line: underline line-through overline; */
+@media (max-width: 600px) {
+  .h1 {
+    font-size: 40px;
+  }
+  .p {
+    font-size: 20px;
+  }
 }
-
